add 1660 break for index

--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -40,6 +40,12 @@
     width: 34px;
     height: 34px;
 
+    @include screen('xlg', max, 2) {
+      min-width: pxtovw(34, 1660);
+      width: pxtovw(34, 1660);
+      height: pxtovw(34, 1660);
+    }
+
     @include screen('lg', max, 2) {
       min-width: pxtovw(26, 1366);
       width: pxtovw(26, 1366);
