--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -135,6 +135,11 @@
   width: 9px;
   height: 9px;
 
+  @include screen('xlg', max, 2) {
+    width: pxtovw(9, 1660);
+    height: pxtovw(9, 1660);
+  }
+
   @include screen('lg', max, 2) {
     width: pxtovw(9, 1366);
     height: pxtovw(9, 1366);
@@ -173,6 +178,11 @@
   &_size10 {
     width: 10px;
     height: 10px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(10, 1660);
+      height: pxtovw(10, 1660);
+    }
 
     @include screen('lg', max, 2) {
       width: pxtovw(10, 1366);
