--- a/app/blocks/burger/nd-burger.scss
+++ b/app/blocks/burger/nd-burger.scss
@@ -14,6 +14,11 @@
   backface-visibility: hidden;
   color: $nd-color-basic;
 
+  @include screen('xlg', max, 2) {
+    width: pxtovw(30, 1660);
+    height: pxtovw(30, 1660);
+  }
+
   @include screen('lg', max, 2) {
     width: pxtovw(30, 1366);
     height: pxtovw(30, 1366);
@@ -42,6 +47,11 @@
     right: 0;
     width: 30px;
     height: 30px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(30, 1660);
+      height: pxtovw(30, 1660);
+    }
 
     @include screen('lg', max, 2) {
       width: pxtovw(26, 1366);
@@ -94,6 +104,11 @@
     right: 0;
     width: 23px;
     border: 1px solid currentColor;
+
+    @include screen('xlg', max, 2) {
+      top: pxtovw(14, 1660);
+      width: pxtovw(23, 1660);
+    }
 
     @include screen('lg', max, 2) {
       top: pxtovw(13, 1366);
