--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -12,6 +12,11 @@
   border-bottom-color: $nd-color-gray-text;
   box-shadow: inset 0 0 0 1px transparent;
 
+  @include screen('xlg', max, 2) {
+    font-size: pxtovw(17, 1660);
+    padding: pxtovw(11, 1660) pxtovw(7, 1660) pxtovw(7, 1660);
+  }
+
   @include screen('lg', max, 2) {
     font-size: pxtovw(17, 1366);
     padding: pxtovw(11, 1366) pxtovw(7, 1366) pxtovw(7, 1366);
@@ -42,6 +47,10 @@
     box-shadow: inset 0 0 0 1px transparent;
     border-radius: 3px;
 
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
     @include screen('lg', max, 2) {
       border-radius: pxtovw(3, 1366);
     }
@@ -60,6 +69,10 @@
     box-shadow: inset 0 0 0 1px $nd-color-main;
     border-radius: 3px;
 
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
     @include screen('lg', max, 2) {
       border-radius: pxtovw(3, 1366);
     }
@@ -77,6 +90,10 @@
     border-color: $nd-color-basic;
     box-shadow: inset 0 0 0 1px transparent;
     border-radius: 3px;
+
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
 
     @include screen('lg', max, 2) {
       border-radius: pxtovw(3, 1366);
