--- a/app/blocks/logo/nd-logo.scss
+++ b/app/blocks/logo/nd-logo.scss
@@ -8,6 +8,11 @@
   height: 37px;
   color: inherit;
 
+  @include screen('xlg', max, 2) {
+    width: pxtovw(182, 1660);
+    height: pxtovw(37, 1660);
+  }
+
   @include screen('lg', max, 2) {
     width: pxtovw(160, 1366);
     height: pxtovw(33, 1366);
@@ -33,6 +38,11 @@
   &_footer {
     width: 182px;
     height: 37px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(182, 1660);
+      height: pxtovw(37, 1660);
+    }
 
     @include screen('lg', max, 2) {
       width: pxtovw(172, 1366);
