--- a/app/blocks/promo-slider/promo-slider.pug
+++ b/app/blocks/promo-slider/promo-slider.pug
@@ -4,13 +4,13 @@ mixin promo-slider()
       .swiper-wrapper
         block
     +e.navigation
-      +e.title.nd-hide-from-xl(data-promo-slider-titles)
+      +e.title.nd-hide-from-lg(data-promo-slider-titles)
       +e.buttons
         +e.button_prev(data-promo-slider-button-prev)
           +icon('nd-slider-arrow')
         +e.button_next(data-promo-slider-button-next)
           +icon('nd-slider-arrow')
-      +e.pagination.nd-hide-xl(data-promo-slider-pagination)
+      +e.pagination.nd-hide-lg(data-promo-slider-pagination)
 
 mixin promo-slider-slide(data)
   +e.slide__.swiper-slide&attributes(attributes)(data-promo-slide-title=data.title)
