--- a/app/blocks/short-profile/short-profile.scss
+++ b/app/blocks/short-profile/short-profile.scss
@@ -18,6 +18,10 @@
     #{$b}_login & {
       margin-right: 11px;
 
+      @include screen('xlg', max, 2) {
+        margin-right: pxtovw(11, 1660);
+      }
+
       @include screen('lg', max, 2) {
         margin-right: pxtovw(11, 1366);
       }
@@ -71,6 +75,10 @@
       font-weight: 500;
       letter-spacing: normal;
       color: $nd-color-basic;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(17, 1660);
+      }
 
       @include screen('lg', max, 2) {
         font-size: pxtovw(15, 1366);
@@ -178,6 +186,13 @@
       background-color: $nd-color-gray-text3;
       margin-bottom: 2px;
       margin-left: 15px;
+
+      @include screen('xlg', max, 2) {
+        font-size: pxtovw(11, 1660);
+        padding: pxotvw(2, 1660) pxtovw(4, 1660) pxtovw(1, 1660);
+        margin-bottom: pxtovw(2, 1660);
+        margin-left: pxtovw(15, 1660);
+      }
 
       @include screen('lg', max, 2) {
         font-size: pxtovw(7, 1366);
