--- a/app/blocks/slider/nd-slider.scss
+++ b/app/blocks/slider/nd-slider.scss
@@ -41,7 +41,11 @@
     transition: stroke $ease-main, opacity $ease-main;
 
     @include screen('xl', max, 2) {
-      width: 50px;
+      width: 60px;
+    }
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(60, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -73,8 +77,13 @@
     height: 40px;
 
     @include screen('xl', max, 2) {
-      width: 8px;
-      height: 21px;
+      width: 12px;
+      height: 30px;
+    }
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(12, 1660);
+      height: pxtovw(30, 1660);
     }
 
     @include screen('lg', max, 2) {
