--- a/app/blocks/social/social.scss
+++ b/app/blocks/social/social.scss
@@ -44,9 +44,9 @@
     height: 28px;
     fill: inherit;
 
-    @include screen('xl', max, 2) {
-      width: 26px;
-      height: 26px;
+    @include screen('xlg', max, 2) {
+      width: pxtovw(28, 1660);
+      height: pxtovw(28, 1660);
     }
 
     @include screen('lg', max, 2) {
