--- a/app/blocks/socials/socials.scss
+++ b/app/blocks/socials/socials.scss
@@ -37,8 +37,8 @@
     &:not(:first-child) {
       margin-left: 38px;
 
-      @include screen('xl', max, 2) {
-        margin-left: 36px;
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(38, 1660);
       }
 
       @include screen('lg', max, 2) {
