--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -4,9 +4,9 @@ block head
   - var pageTitle = 'Spacepool - New Sitemap'
 
 block header
-  - var headerClass = ' is-login'
-  - var map = true
-  - var host = true
+  - var headerClass = ''
+  - var isMap = false
+  - var host = false
   - var pageClass = ' nd-page_main'
 
 block content
