--- a/app/blocks/header-user/header-user.scss
+++ b/app/blocks/header-user/header-user.scss
@@ -38,6 +38,10 @@
       &:not(:last-child) {
         margin-right: 85px;
 
+        @include screen('xlg', max, 2) {
+          margin-right: pxtovw(85, 1660);
+        }
+
         @include screen('lg', max, 2) {
           margin-right: pxtovw(70, 1366);
         }
@@ -82,6 +86,10 @@
       &:not(:last-child) {
         margin-right: 72px;
 
+        @include screen('xlg', max, 2) {
+          margin-right: pxtovw(72, 1660);
+        }
+
         @include screen('lg', max, 2) {
           margin-right: pxtovw(63, 1366);
         }
@@ -95,6 +103,10 @@
 
   &.nd-header-user {
     padding-right: 18px;
+
+    @include screen('xlg', max, 2) {
+      padding-right: pxtovw(18, 1660);
+    }
 
     @include screen('lg', max, 2) {
       padding-right: 0;
