--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -40,6 +40,10 @@
     &:not(:last-child) {
       margin-right: 16px;
 
+      @include screen('xlg', max, 2) {
+        margin-right: pxtovw(16, 1660);
+      }
+
       @include screen('lg', max, 2) {
         margin-right: pxtovw(16, 1366);
       }
@@ -77,6 +81,11 @@
       width: 12px;
       height: 12px;
 
+      @include screen('xlg', max, 2) {
+        width: pxtovw(12, 1660);
+        height: pxtovw(12, 1660);
+      }
+
       @include screen('lg', max, 2) {
         width: pxtovw(12, 1366);
         height: pxtovw(12, 1366);
@@ -96,6 +105,11 @@
     &_arrow5 {
       width: 13px;
       height: 7px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(13, 1660);
+        height: pxtovw(7, 1660);
+      }
 
       @include screen('lg', max, 2) {
         width: pxtovw(13, 1366);
@@ -117,6 +131,11 @@
       width: 13px;
       height: 7px;
 
+      @include screen('xlg', max, 2) {
+        width: pxtovw(13, 1660);
+        height: pxtovw(7, 1660);
+      }
+
       @include screen('lg', max, 2) {
         width: pxtovw(13, 1366);
         height: pxtovw(7, 1366);
@@ -134,6 +153,10 @@
 
       &:not(:last-child) {
         margin-right: 32px;
+
+        @include screen('xlg', max, 2) {
+          margin-right: pxtovw(32, 1660);
+        }
 
         @include screen('lg', max, 2) {
           margin-right: pxtovw(32, 1366);
