--- a/app/blocks/news/nd-news.scss
+++ b/app/blocks/news/nd-news.scss
@@ -13,8 +13,8 @@
     &:not(:first-child) {
       margin-top: 26px;
 
-      @include screen('xl', max, 2) {
-        margin-top: 21px;
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(26, 1660);
       }
 
       @include screen('lg', max, 2) {
@@ -40,6 +40,10 @@
     line-height: 0;
     border-radius: 3px;
 
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
     @include screen('lg', max, 2) {
       border-radius: pxtovw(3, 1366);
     }
@@ -59,6 +63,10 @@
       border-radius: 3px;
 
       @include fill-img;
+
+      @include screen('xlg', max, 2) {
+        border-radius: pxtovw(3, 1660);
+      }
 
       @include screen('lg', max, 2) {
         border-radius: pxtovw(3, 1366);
@@ -82,6 +90,10 @@
     letter-spacing: -.02em;
     line-height: (17 / 14);
 
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(14, 1660);
+    }
+
     @include screen('lg', max, 2) {
       font-size: pxtovw(14, 1366);
     }
@@ -99,7 +111,11 @@
       margin-top: 26px;
 
       @include screen('xl', max, 2) {
-        margin-top: 21px;
+        margin-top: 24px;
+      }
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(24, 1660);
       }
 
       @include screen('lg', max, 2) {
@@ -125,8 +141,8 @@
     letter-spacing: normal;
     line-height: 1.27;
 
-    @include screen('xl', max, 2) {
-      font-size: 18px;
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(20, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -144,8 +160,8 @@
     &:not(:first-child) {
       margin-top: 26px;
 
-      @include screen('xl', max, 2) {
-        margin-top: 20px;
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(26, 1660);
       }
 
       @include screen('lg', max, 2) {
