--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -27,8 +27,8 @@
   width: 100vw;
   max-width: 100vw;
 
-  @include screen('xl', max, 2) {
-    padding-top: 94px;
+  @include screen('xlg', max, 2) {
+    padding-top: pxtovw(94, 1660);
   }
 
   @include screen('lg', max, 2) {
@@ -45,6 +45,10 @@
 
   &_main {
     padding-top: 147px;
+
+    @include screen('xlg', max, 2) {
+      padding-top: pxtovw(147, 1660);
+    }
 
     @include screen('lg', max, 2) {
       padding-top: pxtovw(147, 1366);
