--- a/app/blocks/promo-slider/promo-slider.scss
+++ b/app/blocks/promo-slider/promo-slider.scss
@@ -18,7 +18,11 @@
     z-index: 2;
 
     @include screen('xl', max, 2) {
-      width: 32.7%;
+      width: 44.8%;
+    }
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(495, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -46,7 +50,11 @@
     transition: transform .5s ease, opacity .25s ease;
 
     @include screen('xl', max, 2) {
-      padding-right: 100px;
+      padding-right: 80px;
+    }
+
+    @include screen('xlg', max, 2) {
+      padding-right: pxtovw(80, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -182,8 +190,13 @@
     padding-top: 252px;
 
     @include screen('xl', max, 2) {
-      width: 36.4%;
-      padding-top: 218px;
+      width: 45.4%;
+      padding-top: 250px;
+    }
+
+    @include screen('xlg', max, 2) {
+      padding-top: pxtovw(250, 1660);
+      width: pxtovw(495, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -210,8 +223,8 @@
     align-items: center;
     margin-top: 58px;
 
-    @include screen('xl', max, 2) {
-      margin-top: 20px;
+    @include screen('xlg', max, 2) {
+      margin-top: pxtovw(58, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -238,6 +251,12 @@
     stroke: $nd-color-border-light;
     transition: opacity $ease-main, stroke $ease-main;
     cursor: pointer;
+    box-sizing: border-box;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(42, 1660);
+      height: pxtovw(42, 1660);
+    }
 
     @include screen('lg', max, 2) {
       width: pxtovw(40, 1366);
@@ -271,6 +290,10 @@
     &:not(:last-child) {
       margin-right: 18px;
 
+      @include screen('xlg', max, 2) {
+        margin-right: pxtovw(18, 1660);
+      }
+
       @include screen('lg', max, 2) {
         margin-right: pxtovw(18, 1366);
       }
@@ -290,6 +313,12 @@
       width: 9px;
       height: 20px;
       margin-left: -2px;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(9, 1660);
+        height: pxtovw(20, 1660);
+        margin-left: pxtovw(-2, 1660);
+      }
 
       @include screen('lg', max, 2) {
         width: pxtovw(9, 1366);
@@ -317,6 +346,10 @@
     align-items: center;
     margin-top: 75px;
 
+    @include screen('xlg', max, 2) {
+      margin-top: pxtovw(75, 1660);
+    }
+
     span {
       display: inline-block;
       width: 6px;
@@ -330,6 +363,10 @@
 
       &:not(:last-child) {
         margin-right: 14px;
+
+        @include screen('xlg', max, 2) {
+          margin-right: pxtovw(14, 1660);
+        }
       }
     }
   }
@@ -343,9 +380,9 @@
     text-align: left;
     letter-spacing: -.02em;
 
-    @include screen('xl', max, 2) {
-      margin-top: 30px;
-    }
+    // @include screen('xl', max, 2) {
+    //   margin-top: 30px;
+    // }
 
     @include screen('lg', max, 2) {
       font-size: pxtovw(17, 1366);
@@ -375,6 +412,10 @@
     letter-spacing: -.02em;
     font-size: 24px;
     text-align: left;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(24, 1660);
+    }
 
     @include screen('lg', max, 2) {
       font-size: pxtovw(24, 1366);
