--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -31,6 +31,7 @@ include ../blocks/content-zone/content-zone
 include ../blocks/contract-status/contract-status
 include ../blocks/conversation-info/conversation-info
 include ../blocks/credit-card/credit-card
+include ../blocks/datepicker/datepicker
 include ../blocks/detail/detail
 include ../blocks/dialog/dialog
 include ../blocks/divider/divider
